--- a/notebooks/04_SequenceActivity.ipynb
+++ b/notebooks/04_SequenceActivity.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: SequenceActivity\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## model.SequentialActivity\n",
     "\n",
-    "----\n",
-    "\n",
-    "This notebook provides an example of a sequence activity. The sequence activity calls all activities which are specified as sub processes."
+    "This notebook provides an example of OpenCLSim's __model.SequentialActivity__. The sequential activity calls all activities which are specified as __sub processes__."
    ]
   },
   {
@@ -108,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example the sequence activity executes three basic activities in a sequence. The sequential activity method ensures that the individual basic activities are executed one after the other. This is done (in the background) using the **postpone_start** parameter.\n",
+    "In this example the sequential activity executes three basic activities in a sequence. The SequentialActivity method ensures that the individual basic activities are executed one after the other. This is done (in the background) using the **postpone_start** parameter.\n",
     "\n",
     "To ensure that all logs of the basic activities are also available in a single log, additional logging is configured to an reporting activity."
    ]
@@ -1644,7 +1633,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1658,7 +1647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
