Experiment with plotly setting

--- a/notebooks/04_SequenceActivity.ipynb
+++ b/notebooks/04_SequenceActivity.ipynb
@@ -1627,7 +1627,7 @@
     }
    ],
    "source": [
-    "plot.get_gantt_chart([sequential_activity, *sub_processes])"
+    "plot.get_gantt_chart([sequential_activity, *sub_processes], web=True)"
    ]
   }
  ],
